# mxnet-serving

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile-deepinsight.cpu  Dockerfile-deepinsight.gpu  Dockerfile-deepinsight.gpu.base  README.md
docs/: collection.postman.json
inference/: README.md  face_embedding.py  inference.py
model-r50-am-lfw/: MANIFEST.json  signature.json
models/: mms_app_cpu.conf  mms_app_gpu.conf  mxnet_vision_service.py
mxnet-r50-model/: mms_app_gpu.conf  mxnet_vision_service.py
stress-test/: README.md
stress-test/cpu-10/: log  test-plan.jmx
stress-test/cpu-10/output/: index.html
stress-test/cpu-10/output/content/js/: dashboard.js  graph.js
stress-test/cpu-10/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/gpu-250/: log  test-plan.jmx
stress-test/gpu-250/output/: index.html
stress-test/gpu-250/output/content/js/: dashboard.js  graph.js
stress-test/gpu-250/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/gpu-300/: log  test-plan.jmx
stress-test/gpu-300/output/: index.html
stress-test/gpu-300/output/content/js/: dashboard.js  graph.js
stress-test/gpu-300/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/gpu-400/: log  test-plan.jmx
stress-test/gpu-400/output/: index.html
stress-test/gpu-400/output/content/js/: dashboard.js  graph.js
stress-test/gpu-400/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/gpu-500/: log  run-test.sh  test-plan.jmx
stress-test/gpu-500/output/: index.html
stress-test/gpu-500/output/content/js/: dashboard.js  graph.js
stress-test/gpu-500/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-10/: log  test-plan.jmx
stress-test/threads-10/output/: index.html
stress-test/threads-10/output/content/js/: dashboard.js  graph.js
stress-test/threads-10/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-100/: log  test-plan.jmx
stress-test/threads-100-gpu/: log
stress-test/threads-100-gpu/output/: index.html
stress-test/threads-100-gpu/output/content/js/: dashboard.js  graph.js
stress-test/threads-100-gpu/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-100/output/content/js/: dashboard.js
stress-test/threads-100/output/content/pages/: ResponseTimes.html
stress-test/threads-1000/: log  test-plan.jmx
stress-test/threads-1000-gpu/: log  test-plan.jmx
stress-test/threads-1000-gpu/output/: index.html
stress-test/threads-1000-gpu/output/content/js/: dashboard.js  graph.js
stress-test/threads-1000-gpu/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-1000/output/: index.html
stress-test/threads-1000/output/content/js/: dashboard.js  graph.js
stress-test/threads-1000/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-10000-gpu/: log  test-plan.jmx
stress-test/threads-10000-gpu/output/: index.html
stress-test/threads-10000-gpu/output/content/js/: dashboard.js  graph.js
stress-test/threads-10000-gpu/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-150-gpu/: log  test-plan.jmx
stress-test/threads-150-gpu/output/: index.html
stress-test/threads-150-gpu/output/content/js/: dashboard.js  graph.js
stress-test/threads-150-gpu/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
stress-test/threads-200-gpu/: log  test-plan.jmx
stress-test/threads-200-gpu/output/: index.html
stress-test/threads-200-gpu/output/content/js/: dashboard.js  graph.js
stress-test/threads-200-gpu/output/content/pages/: OverTime.html  ResponseTimes.html  Throughput.html
tvm/: CMakeLists.txt  Dockerfile  benchMark.py  readme.md  start_tvm_svc.sh  tvm-svc-cpu.yaml
tvm/conf/: face_param.toml  service.toml
tvm/include/: anchors.h  face_align.h  face_param.h  form_data.h  tensor_utils.h  tvm_age.h  tvm_gender.h  tvm_mneti.h  tvm_mnetiB.h  tvm_model.h  tvm_r100.h
tvm/src/http/: test_http.cpp  tvm_server.cpp
tvm/src/infer/: bench_mix_model.cpp  bench_multi_model.cpp  test_gender-age.cpp  test_infer.cpp  tvm_age.cpp  tvm_gender.cpp  tvm_mneti.cpp  tvm_mnetiB.cpp  tvm_r100.cpp
tvm/src/loader/: tvm_model.cpp  tvm_runtime_pack.cc
tvm/src/utils/: base64.cpp  face_align.cpp  face_param.cpp
